# FICA

./: .dockerignore  .gitignore  README.md  delete_algebra_classes.py  docker-compose.yml  fica-datos-bimestres.csv  fica-datos-bimestres_grouped.csv  fica-datos-bimestres_grouped_students.csv  grant_permissions.sql  group_by_student.py  group_by_test.py  main.py  requirements.txt
fica-backend/: Dockerfile  pyproject.toml  requirements.txt
fica-backend/app/: .env.example  main.py
fica-backend/app/api/: kpi.py  pipeline.py  tables.py
fica-backend/app/core/: config.py
fica-backend/app/core/database/: db.py  init.sql  script.sql
fica-backend/app/services/: delete_algebra_classes.py  etl_state.py  group_by_student.py  pipeline.py  populate_database.py
fica-backend/app/services/etl/: build_gold.py  gold_utils.py  group_by_student.py  group_by_test.py  populate_database.py  populate_gold.py
fica-backend/app/services/kpi/: kpi_1_1.py  kpi_1_2_1.py  kpi_1_2_2.py  kpi_1_3.py  kpi_1_4.py  kpi_1_5.py  kpi_1_6.py  kpi_1_7.py  kpi_1_8.py  registry.py
fica-backend/old/: database.sql
fica-backend/old/scripts/: db_config.py  populate_database.py
fica-frontend/: Dockerfile  package-lock.json  package.json
fica-frontend/src/: App.js
fica-frontend/src/components/: DataTable.jsx  ETLStatus.jsx  FileUpload.jsx  KPI11Chart.jsx  KPI121Chart.jsx  KPI122Chart.jsx  KPI13Chart.jsx  KPI14Chart.jsx  KPI15Chart.jsx  KPI16Chart.jsx  KPI17Chart.jsx  KPI18Chart.jsx  Navigation.jsx  SearchBar.jsx  TableExplorer.jsx
fica-frontend/src/config/: api.js
scripts/: group_by_student.py
(+5 files in other folders)
