[project]
name          = "fica-backend"
version       = "0.1.0"
description   = "Backend service for FICA application"
dependencies  = [
  "pydantic_settings",
  "fastapi[standard]",
  "numpy", 
  "pandas",
  "sqlalchemy",
  "python-dotenv"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
